# music-player

./: README.md  bun.lockb  components.json  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  main.tsx  routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs  subsonic.rs
src-tauri/src/subsonic/: mod.rs  models.rs
src/components/: AlbumTile.tsx
src/components/dialogs/: SubsonicConnectDialog.tsx
src/components/setup/: AdditionalSettingsStep.tsx  LibraryStep.tsx  ThemeStep.tsx  WelcomeStep.tsx
src/components/ui/: button.tsx  dialog.tsx  form.tsx  input.tsx  resizable.tsx  scroll-area.tsx  spinner.tsx  switch.tsx
src/routes/: __root.tsx  index.lazy.tsx  library.lazy.tsx  settings.lazy.tsx  setup.lazy.tsx
src/screens/: App.tsx  Library.tsx  Settings.tsx  Setup.tsx
src/types/: config.ts  metadata.ts
src/util/: config.ts  db.ts  musicinfo.ts  subsonic.ts
src/views/: PlayerView.tsx
